# Log-Graph-Analyzer

./: .gitignore  Cargo.toml  README.md  README_zh.md  build.sh  nfpm.yaml  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/: analyze-log.md  develop-log-analyzer.md
.github/workflows/: ci.yml  release.yml
benchmarks/: bench.py
doc/: architecture.md  benchmarks.md  design.md  development.md
python/lga/: __init__.py  cli.py
python/log_analyzer/: cli.py
python/lograph/: __init__.py  cli.py
scripts/: bench.py
src/: bindings.rs  cache.rs  config.rs  error.rs  history.rs  lib.rs  main.rs  tag.rs
src/engine/: collector.rs  mod.rs
src/operator/: mod.rs
src/repo/: mod.rs
src/tui/: app.rs  collect.rs  event.rs  file_browser.rs  history_builder.rs  mod.rs  search.rs  state.rs  tag_ops.rs  ui.rs  viewport.rs
src/tui/handlers/: command_mode.rs  commands.rs  file_browser_mode.rs  input_mode.rs  merge_mode.rs  mod.rs  normal_mode.rs  ops.rs  search_mode.rs  tag_manager.rs
src/tui/ops/: apply_from.rs  apply_operation.rs  checkout.rs  export.rs  merge.rs  mod.rs  replay.rs  soft_delete.rs  subtract.rs  undo.rs
src/tui/tests/: app.rs  handlers.rs  mod.rs  test_utils.rs
src/tui/widgets/: mod.rs
tests/: test_append.py  test_cli.py  test_collector.py  test_engine.py  test_history.rs  test_integration.py  test_python_repo.py  test_repo.rs  test_workspace.rs  test_workspace_py.py
