[package]
name = "lograph"
version = "0.0.2"
edition = "2021"
description = "Log Graph Analyzer — high-performance log analysis with compressed storage, Git-like history DAG, and reversible operations"

[features]
default = ["python-bindings"]
python-bindings = ["pyo3/extension-module"]

[lib]
name = "lograph"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lograph"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.28" }
rayon = "1.10"
zstd = "0.13"
regex = "1"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
crossbeam-channel = "0.5"
parking_lot = "0.12"
toml = "0.8"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
