[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lga"
version = "0.0.1"
description = "High-performance log analysis tool for large text files (>10GB)"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
lga-cli = "lga.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-tmp-files>=0.0.2",
]

[tool.maturin]
python-source = "python"
module-name = "lga._core"
features = ["python-bindings"]

[tool.pytest.ini_options]
testpaths = ["tests"]
