[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lograph"
version = "0.0.1"
description = "Log Graph Analyzer — high-performance log analysis tool for large text files (>10GB)"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
lograph-cli = "lograph.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-tmp-files>=0.0.2",
]

[tool.maturin]
python-source = "python"
module-name = "lograph._core"
features = ["python-bindings"]

[tool.pytest.ini_options]
testpaths = ["tests"]
